Fix for bug #21029: Caret get's wrong offset when parent not a text node

mozilla/layout/base/public/nsIFrameSelection.h
      - Added aReturnOffset arg to GetFrameForNodeOffset().

    mozilla/layout/base/src/nsCaret.cpp
      - mLastContentOffset now gets it's value from the offset
        returned by GetFrameForNodeOffset().

    mozilla/layout/base/src/nsRangeList.cpp
      - GetFrameForNodeOffset() now returns an offset to be used
        with the result frame.

r=mjudge@netscape.com,jfrancis@netscape.com